Paginate ListSeasons operations
